# Hacienda-mind

./: .ai-rulez-generated.json  .coderabbit.yaml  .gitignore  .goreleaser.yaml  .mcp.json  .pre-commit-config.yaml  .typos.toml  ATTRIBUTIONS.md  BUILD_OPTIMIZATION_QUICK_START.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yaml  basemind.toml  build.rs  deny.toml  gemini-extension.json  hacienda-mcp.toml  kimi.plugin.json  llms.txt  opencode.json  package.json  poly.toml
.agents/plugins/: marketplace.json
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/agents/: harness-interpreter.md  mcp-tool-author.md  rust-perf-engineer.md  scanner-extension.md
.ai-rulez/commands/: harden.md  scan.md  serve.md
.ai-rulez/context/: code-style.md  crate-layout.md  harden-harness.md  inverted-index.md  mcp-surface.md  scanner-pipeline.md
.ai-rulez/rules/: agent-comms.md  basemind-usage.md  mcp-tool-conventions.md  module-size-cap.md  perf-discipline.md  release-versioning.md  schema-and-blob-compat.md
.cargo/: config-fast.toml  config.toml
.claude-plugin/: marketplace.json  plugin.json  statusline.sh
.codex-plugin/: .mcp.json  plugin.json
.codex-plugin/commands/: bm-init.md  bm-stats.md  bm-statusline.md
.codex-plugin/hooks/: run-hook.cmd
.cursor-plugin/: plugin.json
.cursor-plugin/commands/: bm-statusline.md
.github/workflows/: ci.yaml  ci.yml  publish.yaml
.hermes/package/: pyproject.toml
.hermes/package/src/basemind_hermes_plugin/: __init__.py  hermes.py  plugin.yaml
.hermes/package/src/basemind_hermes_plugin/commands/: bm-doctor.md  bm-init.md  bm-scan.md  bm-stats.md  bm-statusline.md  bm.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-cli/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-code-search/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-comms/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-doctor/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-git-history/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-scan/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/basemind-stats/: SKILL.md
.hermes/package/src/basemind_hermes_plugin/skills/multi-agent-room/: SKILL.md
benches/: extract.rs  git_history.rs  hashing.rs  query.rs
commands/: bm-doctor.md  bm-scan.md
crates/lsp-positions/: README.md
crates/pii-candle/: Cargo.toml
crates/tree-sitter-graph/: README.md
crates/tree-sitter-stack-graphs/: CHANGELOG.md
crates/xberg-gliner/: Cargo.toml
docs/: ARCHITECTURE.md
docs/demos/: multi-agent-review.md  run-panel.sh
docs/media/: MCP_DEMO.md  README.md
hooks/: pre-tool-guard  session-start
monitors/: monitors.json
npm-package/: README.md  index.js  install.js  package.json
opencode-plugin/: README.md  basemind.js  hacienda-mcp.js  package.json
opencode-plugin/commands/: bm.md
pip-package/: README.md  pyproject.toml
pip-package-hermes/: README.md  pyproject.toml
pip-package-hermes/basemind_hermes_plugin/: __init__.py  hermes.py  plugin.yaml
pip-package-hermes/tests/: test_hermes_register.py
pip-package/basemind/: __init__.py  cli.py  downloader.py  plugin.yaml
pip-package/tests/: test_downloader_platform.py
schema/: README.md  basemind-config-v1.schema.json  hacienda-mcp-config-v1.schema.json
scripts/: bench.sh  comms-monitor.sh  demo-record.sh  demo.sh  fast-build.sh  harden.sh  mcp-launch.sh  package-release.sh  performance-check.sh  release-bump.sh  sync-plugin-skills.sh  sync-to-codex-plugin.sh  update-homebrew-formula.sh
skills/basemind-git-history/: SKILL.md
src/: chunk.rs  embeddings.rs  git.rs  git_cache.rs  lang.rs  lang_cli.rs  lib.rs  main.rs  path.rs  query.rs  render.rs  scanner.rs  scanner_code.rs  scanner_docs.rs  scanner_filter.rs  store.rs  store_blob.rs  store_gc.rs  store_lock.rs  sysres.rs  url.rs  version.rs  watcher.rs
tests/: bug_13_cli.rs  bug_18_cli.rs  bug_20_cli.rs  bug_22_cli.rs  bug_23_git_cache.rs  bug_24_cli.rs  bug_git.rs  cache_paths.rs  cli_parity.rs  cli_smoke.rs  code_intel_smoke.rs  code_search_smoke.rs  comms_cli_smoke.rs  comms_smoke.rs  concurrency_smoke.rs  config_root_smoke.rs  config_schema.rs  daemon_integration.rs  extra_roots_smoke.rs  find_callers_resolved_smoke.rs  git_cache_smoke.rs  git_history_share_smoke.rs  git_history_smoke.rs  git_parity.rs  git_smoke.rs  governance_smoke.rs  harden.rs  incremental_resolve_smoke.rs  incremental_scope_resolve_smoke.rs  init_smoke.rs  lang_fallback_smoke.rs  mcp_smoke.rs  multisession_smoke.rs  plugin_manifest_smoke.rs  precise_resolution_smoke.rs  property_smoke.rs  root_discovery_smoke.rs  scan_smoke.rs  schema_bump.rs  serve_contention_smoke.rs  (+5 more)
website/: README.md  astro.config.mjs
(+207 files in other folders)
